# g1_hand_move

./: .gitignore
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/g1_arm_joint_control/lib/g1_arm_joint_control/: arm_joint_controller  arm_pose_sender  arm_sim_node  hand_target_ik
install/g1_arm_joint_control/share/g1_arm_joint_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/g1_arm_joint_control/share/g1_arm_joint_control/config/: arm_control.yaml  arm_sim.yaml  hand_target_ik.yaml
install/g1_arm_joint_control/share/g1_arm_joint_control/launch/: arm_control.launch.py  arm_mujoco_sim.launch.py
install/unitree_hg/share/unitree_hg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/unitree_hg/share/unitree_hg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  (+13 more)
log/: latest_build
src/g1_arm_joint_control/: README.md  package.xml  setup.cfg  setup.py
src/g1_arm_joint_control/config/: arm_control.yaml  arm_sim.yaml  hand_target_ik.yaml
src/g1_arm_joint_control/g1_arm_joint_control/: arm_joint_controller_node.py  arm_pose_sender_node.py  arm_sim_node.py  hand_target_ik_node.py
src/g1_arm_joint_control/launch/: arm_control.launch.py  arm_mujoco_sim.launch.py
src/g1_arm_joint_control/resource/: g1_arm_joint_control
src/unitree_hg/: CMakeLists.txt
(+209 files in other folders)
